apps/goatlint/src/snapshots/fixtures__lsp__ts_path_alias_--import-plugin -D import__no-cycle deep__src__dep-a.ts@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --import-plugin -D import/no-cycle deep/src/dep-a.ts
working directory: fixtures/lsp/ts_path_alias
----------

  x eslint-plugin-import(no-cycle): Dependency cycle detected
   ,-[deep/src/dep-a.ts:2:19]
 1 | // should report cycle detected
 2 | import { b } from '@/dep-b';
   :                   ^^^^^^^^^
 3 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ @/dep-b (fixtures/lsp/ts_path_alias/deep/src/dep-b.ts)
           │         ⬇ imports
           │    ./dep-a.ts (fixtures/lsp/ts_path_alias/deep/src/dep-a.ts)
           ╰─────────╯ imports the current file

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 58 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
